--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,6 @@
 @import "modules/messages";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "side_bar.scss"
-@import "main_chat.scss"
+@import "side_bar.scss";
+@import "main_chat.scss";
 
