--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -7,7 +7,7 @@
       .top-items__icons
         = link_to "#", class: "icon" do
           = icon('fas', 'fas fa-edit')
-        = link_to "#", class: "icon" do 
+        = link_to edit_user_path(current_user) do 
           = icon('fa', 'fa fa-cog')
 
   .chat-side__groups
