--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -7,7 +7,7 @@
         Member: kimu hoge
 
     .group-edit
-      = link_to "#", class: "edit-btn" do
+      = link_to group_path(:id), class: "edit-btn" do
         Edit
 
   .chat-main__messages
