--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -63,33 +63,37 @@
   &__form{
     background-color: #d2d2d2;
     height: 90px;
-    padding-top: 20px;
-    padding-left: 40px;
+    padding: 20px 40px;
 
     form{
       display: flex;
+      height: 50px;
+    
       .input-box{
         width: 100%;
         display: flex;
         position: relative;
-  
+
         &__text{
-          height: 50px;
           width: 100%;
           border-style: none;
           padding: 0 40px 0 10px;
         }
-        &__image{
-          position: absolute;
-          top: 10px;
-          right: 10px;
-          cursor: pointer;
+        
+          &__image{
+            font-size: 1.3rem;
+            width: 20px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
 
-          &__file{
-            display: none;
+            &--file{
+              display: none;
+            }
           }
-        }
       }
+      
       .submit-btn{
         background-color: #38aef0;
         color: #ffffff;
@@ -97,7 +101,7 @@
         height: 50px;
         padding: 0 30px;
         margin-left: 15px;
-        margin-right: 40px;
+        // margin-right: 40px;
         cursor: pointer;
       }
     }
