--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -38,6 +38,7 @@
   &__messages{
     background-color: #fafafa;
     height: calc(100vh - 190px);
+    overflow: scroll;
 
     .message{
       padding: 35px 0 0 40px;
